start working on themes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,17 +4,18 @@
     "lib": [
       "es6",
       "dom",
-      "esnext"
-    ], 
+      "esnext",
+      "dom.iterable"
+    ],
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true, 
-    "module": "NodeNext", 
+    "emitDecoratorMetadata": true,
+    "module": "NodeNext",
     "rootDir": "src",
-    "resolveJsonModule": true, 
-    "allowJs": true, 
-    "outDir": "build", 
-    "esModuleInterop": true, 
-    "forceConsistentCasingInFileNames": true,     
+    "resolveJsonModule": true,
+    "allowJs": true,
+    "outDir": "build",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "moduleResolution": "nodenext",
     "allowImportingTsExtensions": true,
     "allowSyntheticDefaultImports": true,
