refactor(settings): move settings into its own package, add GlobalSettingsTab.tsx for testing purposes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "esnext",
       "dom.iterable"
     ],
+    "jsx": "react-jsx",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "module": "NodeNext",
