--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   "dependencies": {
     "@gluon-framework/gluon": "^0.14.0",
     "node-fetch": "2.6.7",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.4.0",
+    "@types/react": "^18.2.17",
+    "@types/react-dom": "^18.2.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
