feat(settings): add form submitting & reading/editing json files

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,6 @@ dist
 # End of https://www.toptal.com/developers/gitignore/api/node,yarn
 
 test/setEnvVars.ts
+
+# Gluon data (e.g. literally gluon_data)
+gluon_data
