refactor(title): update title only on title change through MutationObserver

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,9 @@
     "moduleResolution": "nodenext",
     "allowImportingTsExtensions": true,
     "allowSyntheticDefaultImports": true,
+    "suppressImplicitAnyIndexErrors": true,
 
     "strict": true, /* Enable all strict type-checking options. */
-    "noImplicitAny": true, /* Enable error reporting for expressions and declarations with an implied 'any' type. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   }
 }
