--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@gluon-framework/gluon": "^0.14.0",
     "node-fetch": "2.6.7",
     "nodemon": "^2.0.22",
+    "postcss": "^8.4.27",
+    "postcss-import": "^15.1.0",
+    "postcss-parser-tests": "^8.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
